tests/errors/sem.type-mismatch.bin-compare.or
main :: () -> void {
    false == 5;
};
